--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=HeartBeat
-version=0.1.1
+version=0.1.2
 author=Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Rob Tillaart <rob.tillaart@gmail.com>
-sentence=Arduino library for a heartbeat function.
+sentence=Arduino library for HeartBeat with frequency and dutyCycle.
 paragraph=blinking led by frequent polling.
 category=Uncategorized
 url=https://github.com/RobTillaart/HeartBeat
