--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=HeartBeat
-version=0.1.2
+version=0.1.3
 author=Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Rob Tillaart <rob.tillaart@gmail.com>
 sentence=Arduino library for HeartBeat with frequency and dutyCycle.
 paragraph=blinking led by frequent polling.
-category=Uncategorized
+category=Other
 url=https://github.com/RobTillaart/HeartBeat
 architectures=*
 includes=HeartBeat.h 
