--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=HeartBeat
-version=0.1.3
+version=0.2.0
 author=Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Rob Tillaart <rob.tillaart@gmail.com>
-sentence=Arduino library for HeartBeat with frequency and dutyCycle.
+sentence=Arduino library for HeartBeat with frequency and duty cycle.
 paragraph=blinking led by frequent polling.
 category=Other
 url=https://github.com/RobTillaart/HeartBeat
