fix #15, name conflict ESP32 Core V3.1.0

--- a/library.properties
+++ b/library.properties
@@ -7,5 +7,5 @@ paragraph=blinking led by frequent polling.
 category=Other
 url=https://github.com/RobTillaart/HeartBeat
 architectures=*
-includes=HeartBeat.h
+includes=Heart_Beat.h
 depends=
