fix #15, name conflict ESP32 Core V3.1.0 (#16)
- fix #15, Conflicting name with ESP Core V3.1.0
- updated library.properties and library.json
- update readme.md
- add one Heart_Beat example

--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=HeartBeat
-version=0.3.5
+version=0.3.6
 author=Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Rob Tillaart <rob.tillaart@gmail.com>
 sentence=Arduino library for HeartBeat with frequency and duty cycle.
@@ -7,5 +7,5 @@ paragraph=blinking led by frequent polling.
 category=Other
 url=https://github.com/RobTillaart/HeartBeat
 architectures=*
-includes=HeartBeat.h
+includes=Heart_Beat.h
 depends=
